<resources>
    <string name="app_name">淮晟煤炭</string>
    <string name="invoice">开票</string>
    <string name="cash_sale">现货</string>
    <string name="zy">自营</string>
    <string name="main_tab_1">找煤炭</string>
    <string name="main_tab_2">找钢材</string>
    <string name="main_tab_3">找货源</string>
    <string name="main_tab_4">发布询价</string>
    <string name="main_tab_5">发布卖品</string>
    <string name="vol">成交量</string>
    <string name="Turnover">成交金额</string>
    <string name="main_coal">煤炭 %s</string>
    <string name="main_steel">钢材 %s</string>
    <string name="main_hot_resource">热门资源</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_pwd_6_15">请输入6~15位密码</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="forget_pwd_hint_confirm_pwd">请确认密码</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_forget_pwd">忘记密码</string>
    <string name="login_error_phone">手机号码格式不正确</string>
    <string name="login_error_pwd">请输入密码!</string>
    <string name="forget_pwd_error_pwd2">请再次输入密码!</string>
    <string name="forget_pwd_pwd_no_equal">两次密码不一致</string>
    <string name="login_hint_code">请输入验证码</string>
    <string name="login_hint_get_code">获取验证码</string>
    <string name="login_text_register">立即注册</string>
    <string name="login_hint_get_reGetCode">重发(%s)s</string>
    <string name="login_text_protocol">《大宗贸易用户协议》</string>
    <string name="login_text_protocol_agree">已阅读并同意</string>
    <string name="mine_my_order">我的订单</string>
    <string name="mine_inquiry_my_order">询盘订单</string>
    <string name="mine_inquiry_info_manage">询盘信息管理</string>
    <string name="mine_goods_manage">商品管理</string>
    <string name="mine_my_sold_order">已售订单</string>
    <string name="mine_application_supplier">申请供应商</string>
    <string name="mine_manage_address">管理收货地址</string>
    <string name="mine_applyfor_chauffeur">申请司机</string>
    <string name="mine_setting">设置</string>
    <string name="mine_header">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_company_name">公司名称</string>
    <string name="mine_phone">手机号</string>
    <string name="mine_telephone">固定电话</string>
    <string name="mine_qq">QQ</string>
    <string name="mine_confirm">确定</string>
    <string name="address_choose_name">选择收货地址</string>
    <string name="address_manager_name">地址管理</string>
    <string name="address_choose_manager">管理</string>
    <string name="address_edit_keep">保存</string>
    <string name="address_choose_default">[默认地址]</string>
    <string name="address_choose_default2">默认地址</string>
    <string name="address_choose_setDefault">设为默认</string>
    <string name="address_choose_delete">删除地址</string>
    <string name="address_manager_add">新增地址</string>
    <string name="address_userName">收货人</string>
    <string name="postal_code">邮政编码</string>
    <string name="address_area">所在地区</string>
    <string name="address_area_detail">详细地址</string>
    <string name="address_hint_userName">请输入收货人姓名</string>
    <string name="address_userPhone">手机号</string>
    <string name="address_hint_userPhone">请输入收货人手机号</string>
    <string name="input_postal_code">请输入邮政编码</string>
    <string name="address_hint_area">请选择所在地</string>
    <string name="address_hint_area_detail">请输入详细地址</string>
    <string name="address_update_name">编辑地址</string>
    <string name="favorite_goods_edit">编辑</string>
    <string name="favorite_goods_confirm">完成</string>
    <string name="favorite_goods_delete">删除</string>
    <string name="favorite_selectAll">全选</string>
    <string name="sort">综合排序</string>
    <string name="area">区域</string>
    <string name="quantity">数量:</string>
    <string name="delivery_type">交货方式</string>
    <string name="trade_name">品名</string>
    <string name="texture">材质</string>
    <string name="coal_type">煤炭</string>
    <string name="steel_type">类别</string>
    <string name="metals">有色金属</string>
    <string name="origin">产地:%s</string>
    <string name="heavy">件重:%s</string>
    <string name="main_cocal_detail_text1">固定碳(FC):</string>
    <string name="main_cocal_detail_text2">发热量(Qnet):</string>
    <string name="main_cocal_detail_text3">灰份(Ad):</string>
    <string name="main_cocal_detail_text4">挥发份(Var):</string>
    <string name="main_cocal_detail_text5">内水(Mad):</string>
    <string name="main_cocal_detail_text6">全硫份(Start):</string>


    <string name="main_cocal_detail2_text1">灰份(Ad):</string>
    <string name="main_cocal_detail2_text2">全硫份(Start):</string>
    <string name="main_cocal_detail2_text3">粘结(RG):</string>
    <string name="main_cocal_detail2_text4">挥发份(Var):</string>
    <string name="main_cocal_detail2_text5">Y值:</string>
    <string name="main_cocal_detail2_text6">岩相:</string>
    <string name="main_cocal_detail2_text7">SCR:</string>


    <string name="main_cocal_detail3_text1">低位热值:</string>
    <string name="main_cocal_detail3_text2">空干基硫分:</string>
    <string name="main_cocal_detail3_text3">空干基挥发分:</string>
    <string name="main_cocal_detail3_text4">内水(Mad):</string>
    <string name="main_cocal_detail3_text5">固定碳(FC):</string>
    <string name="main_cocal_detail3_text6">收到基挥发分:</string>
    <string name="main_cocal_detail3_text7">全水份:</string>
    <string name="main_cocal_detail3_text8">灰份(Ad):</string>
    <string name="main_cocal_detail3_text9">灰熔点(ST):</string>
    <string name="main_cocal_detail3_text10">G值:</string>
    <string name="main_cocal_detail3_text11">Y值:</string>











    <string name="main_cocal_detail_supply">供应量:</string>
    <string name="main_cocal_detail_unit_price">单价</string>
    <string name="CNY">￥ %s</string>
    <string name="main_cocal_detail_text7">付款方式</string>
    <string name="main_cocal_detail_text8">检验机构</string>
    <string name="main_cocal_detail_text9">交货时间</string>
    <string name="main_cocal_detail_text10">交货方式</string>
    <string name="main_cocal_detail_text11">交货地点</string>
    <string name="main_cocal_detail_text12">备注</string>
    <string name="main_cocal_detail_text13">立即下单</string>
    <string name="delete">删除</string>
    <string name="main_steel_text1">规格</string>
    <string name="main_steel_text2">材质</string>
    <string name="main_steel_text3">仓库</string>
    <string name="commit">提交</string>
    <string name="ship_to">交货地: %s</string>
    <string name="take_goods_date">收货时间: %s</string>
    <string name="buy">求购数</string>
    <string name="jian">%s件</string>
    <string name="dun">%s吨</string>
    <string name="demand_detail_text1">地位热值:</string>
    <string name="demand_detail_text2">空干基硫分:</string>
    <string name="demand_detail_text3">空干基挥发分:</string>
    <string name="demand_detail_text4">内水(Mad):</string>
    <string name="demand_detail_text5">固定碳(FC):</string>
    <string name="demand_detail_text6">求购数:</string>
    <string name="demand_detail_text7">立即报价</string>
    <string name="demand_detail_text8">计划收货时间</string>
    <string name="send_goods_date">发货时间</string>
    <string name="start_location">始发地</string>
    <string name="end_location">目的地</string>
    <string name="goods_confirm_no_address">您还没有收货地址，点击这里创建</string>
    <string name="contact">联系人: </string>
    <string name="contact_type">联系方式</string>
    <string name="total">合计:%s</string>
    <string name="my_order_create_time">创建时间:%s</string>
    <string name="order_time">下单时间:%s</string>
    <string name="referrer_offer">已有%s个报价</string>
    <string name="money">金额: %s</string>
    <string name="Offer_time">报价时间:%s</string>
    <string name="ConfirmTime">确认时间:%s</string>
    <string name="my_order_buy_num">购买数:%s</string>
    <string name="inquriy_cocal_detail_state">状态:%s</string>
    <string name="Offer_contact">报价联系人:%s</string>
    <string name="Input_phone">请输入手机号</string>
    <string name="Input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="Input_new_password">请设置新的密码</string>
    <string name="Input_password">请确认登录密码</string>
    <string name="my_order_num">订单编号:%s</string>
    <string name="delivery_time">发货时间:</string>
    <string name="remark">备注:</string>
</resources>
