<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical">

    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/ed_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@mipmap/icon_login_edit_text_white_bg"
        android:drawableStart="@mipmap/icon_login_phone_off"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/login_hint_phone"
        android:paddingEnd="@dimen/margin_25"
        android:paddingStart="@dimen/margin_25"
        android:textCursorDrawable="@drawable/color_cursor"
        android:inputType="phone"
        android:textColor="@color/MaterialGrey800"
        android:textColorHint="@color/MaterialGrey400"
        android:textSize="@dimen/text_14" />

    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/ed_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@mipmap/icon_login_edit_text_gray_bg"
        android:drawableStart="@mipmap/icon_login_pwd_off"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/login_hint_pwd"
        android:paddingEnd="@dimen/margin_25"
        android:paddingStart="@dimen/margin_25"
        android:textCursorDrawable="@drawable/color_cursor"
        android:inputType="textPassword"
        android:textColor="@color/MaterialGrey800"
        android:textColorHint="@color/MaterialGrey400"
        android:textSize="@dimen/text_14" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="@dimen/margin_45"
        android:background="@mipmap/icon_login_bt_bg"
        android:text="@string/login_text_login"
        android:textColor="@color/White"
        android:textSize="@dimen/sp_16" />
    <TextView
        android:id="@+id/bt_forgetPwd"
        android:textColor="@color/MaterialTealA700"
        android:text="@string/login_text_forget_pwd"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_45"
        android:layout_marginEnd="@dimen/margin_45"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>