<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:id="@+id/llLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:orientation="vertical">

            <com.flyco.roundview.RoundTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingEnd="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="2dp"
                android:text="11"
                android:textColor="@color/White"
                android:textSize="@dimen/sp_14"
                app:rv_backgroundColor="@color/colorPrimary"
                app:rv_cornerRadius="@dimen/margin_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/buy"
                android:textColor="@color/MaterialGrey800"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/dun"
                android:textColor="@color/Red"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@id/img"
            android:layout_toStartOf="@id/llLay"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="11"
                android:textColor="@color/MaterialGrey800"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="11"
                android:textColor="@color/MaterialGrey600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/ship_to"
                android:textColor="@color/MaterialGrey400"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/take_goods_date"
                android:textColor="@color/MaterialGrey400"
                android:textSize="14sp" />


        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/White"
        android:padding="@dimen/margin_15"
        android:layout_marginTop="1dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:text="@string/my_order_create_time"
            android:textColor="@color/MaterialGrey600"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/referrer_offer"
            android:textColor="@color/MaterialGrey600"
            android:textSize="14sp" />

    </RelativeLayout>
</LinearLayout>